- correction lien sponsor.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="#hero" class="hidden">Top</a></li>
 
 							<li><a href="#about">A Propos</a></li>
-							<li><a href="#benefits">Sponsors</a></li>
+							<li><a href="#sponsors">Sponsors</a></li>
 							<li><a href="#how-it-works">Comment ça marche</a></li>
 							<li><a href="#jury">Le jury</a></li>
 							<li><a href="#faq">FAQ</a></li>
