--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 									<div class="video-embed">
 
 										<!-- VIDEO EMBED FROM YOUTUBE -->
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/YvNwafueBTk?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/PyeARmlLkCw" frameborder="0" allowfullscreen></iframe>
 
 									</div>
 
-									<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat arcu ut orci porta, eget porttitor felis suscipit. Sed a nisl ullamcorper, tempus augue at, rutrum lacus.</p>
+									<p class="lead"> Du 09 au 11 octobre 2015 <br/> 1er Hackathon dédié à l'Industrie en Alsace </br> 54h pour innover et inventer l'industrie 4.0</p>
 
 								</div>
 
@@ -231,8 +231,8 @@
 
 						<!-- DESCRIPTION TEXT -->
 						<div class="about-text col-md-6">
-							<p class="lead">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat arcu ut orci porta, eget porttitor felis suscipit. Sed a nisl ullamcorper, tempus augue at, rutrum lacus. Duis et turpis eros. Duis ex metus, facilisis nec porta non, accumsan vel turpis. Proin euismod, sem a mollis vestibulum, ligula elit faucibus erat, in dignissim sapien leo eget quam.</p>
+							<p class="lead">Le Hacking Industry Camp est un hackathon dédié à l’industrie, un évènement destiné à bousculer les idées et à faire émerger de nouveaux projets. Des équipes aux divers talents s’affrontent pendant tout un week-end pour concevoir des prototypes d’applications, d’objets connectés… C’est un espace-temps où les communautés se croisent et fourmillent d’idées avec pour objectif l’innovation !</p>
+							<p>54 h pour participer à l’aventure Usine 4.0. Déplacer l’industrie dans ses fondements, l’interroger sur ses process, la rendre plus agile, plus inventive. <br/> 54 h pour innover à plusieurs. Un concentré d’énergie créative de tous bords : développeurs, ingénieurs, designers, bricoleurs, utilisateurs, marketeurs… <br/> 54 h pour démultiplier les idées, les faire émerger, les concrétiser et donner naissance à des projets innovants qui se poursuivront, soit par la création de start up, soit au sein d’entreprises existantes.</p>
 							<ul class="icon-list">
 								<li>
 									<span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
