--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 						<!-- DESCRIPTION IMAGE -->
 						<div class="about-image col-md-6" data-animation="fadeIn">
-							<img src="images/contents/IMG_6656.jpg" alt="Description Image">
+							<img src="images/contents/IMG_6656.JPG" alt="Description Image">
 						</div>
 
 						<!-- DESCRIPTION TEXT -->
@@ -385,7 +385,7 @@
 						<!-- HOW IT WORKS - ITEM 1 -->
 						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
 							<div class="hiw-item">
-								<img class="hiw-item-picture" src="images/contents/DSC06671.jpg" alt="">
+								<img class="hiw-item-picture" src="images/contents/DSC06671.JPG" alt="">
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">1</span>
 									<h4 class="hiw-item-title">Le Pitch</h4>
@@ -423,7 +423,7 @@
 						<!-- HOW IT WORKS - ITEM 4 -->
 						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
 							<div class="hiw-item even">
-								<img class="hiw-item-picture" src="images/contents/D62A0273.jpg" alt="">
+								<img class="hiw-item-picture" src="images/contents/D62A0273.JPG" alt="">
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">4</span>
 									<h4 class="hiw-item-title">La présentation finale</h4>
