--- a/index.html
+++ b/index.html
@@ -552,7 +552,9 @@
 								<div class="faq-item-text">Vous pouvez développer un projet from scratch cad développer un projet existant maximun au stade de concept</div>
 							</div>
 						</div>
+					</div>
 
+					<div class="faq-row row">
 						<div class="col-md-6">
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
@@ -568,7 +570,9 @@
 								<div class="faq-item-text">Pour participer vous pouvez soit poster un défi, soit choisir un défi posté par un autre participant et integrer l'équipe</div>
 							</div>
 						</div>
-
+					</div>
+					
+					<div class="faq-row row">
 						<div class="col-md-6">
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
