--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<title>Hacking Industry Camp par Alsace Digitale</title>
 		<meta name="author" content="David Rozando">
 		<meta name="keywords" content="responsive, parallax, bootstrap, html5 template, one page, landing page">
-		<meta name="description" content="Drew - A Multipurpose Landing Page Template">
+		<meta name="description" content="Hacking Industry Camp, 54h pour innover dans l'industrie. Du 09 au 11 octobre 2015 à Strasbourg">
 
 		<!-- FAVICONS -->
 		<link rel="icon" href="images/favicons/favicon.ico">
@@ -229,7 +229,7 @@
 
 						<!-- DESCRIPTION IMAGE -->
 						<div class="about-image col-md-6" data-animation="fadeIn">
-							<img src="images/contents/IMG_6656.JPG" alt="Description Image">
+							<img src="images/contents/a-propos.jpg" alt="a propos">
 						</div>
 
 						<!-- DESCRIPTION TEXT -->
@@ -385,7 +385,7 @@
 						<!-- HOW IT WORKS - ITEM 1 -->
 						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
 							<div class="hiw-item">
-								<img class="hiw-item-picture" src="images/contents/DSC06671.JPG" alt="">
+								<img class="hiw-item-picture" src="images/contents/how1.jpg" alt="le pitch">
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">1</span>
 									<h4 class="hiw-item-title">Le Pitch</h4>
@@ -397,7 +397,7 @@
 						<!-- HOW IT WORKS - ITEM 2 -->
 						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
 							<div class="hiw-item even">
-								<img class="hiw-item-picture" src="images/contents/ChercheDveloppeur_LeaMarietteHD.jpg" alt="">
+								<img class="hiw-item-picture" src="images/contents/how2.jpg" alt="le choix des projets">
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">2</span>
 									<h4 class="hiw-item-title">Le choix des projets</h4>
@@ -411,7 +411,7 @@
 						<!-- HOW IT WORKS - ITEM 3 -->
 						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
 							<div class="hiw-item">
-								<img class="hiw-item-picture" src="images/contents/DSC_0321 copie.jpg" alt="">
+								<img class="hiw-item-picture" src="images/contents/how3.jpg" alt="la construction">
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">3</span>
 									<h4 class="hiw-item-title">La construction</h4>
@@ -423,7 +423,7 @@
 						<!-- HOW IT WORKS - ITEM 4 -->
 						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
 							<div class="hiw-item even">
-								<img class="hiw-item-picture" src="images/contents/D62A0273.JPG" alt="">
+								<img class="hiw-item-picture" src="images/contents/how4.jpg" alt="présentation finale">
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">4</span>
 									<h4 class="hiw-item-title">La présentation finale</h4>
