- le retour de la revanche de l'italique. - le logo IID passe en meilleur définition - Suppression des étoiles au dessus des témoignagnes.

--- a/index.html
+++ b/index.html
@@ -283,13 +283,6 @@
 
 								<!-- TESTIMONIAL ITEM 1 -->
 								<li class="testimonial-slide">
-									<span class="testimonial-ratings">
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-									</span>
 									<blockquote class="testimonial-quote">
 										<p>C'est la troisième révolution industrielle. Je défends l'idée qu'il y a eu un changement massif de paradigme qui nécessite une culture économique, sociale, industrielle différente, qui a bouleversé notre économie et l'organisation de la société.</p>
 									</blockquote>
@@ -298,13 +291,6 @@
 
 								<!-- TESTIMONIAL ITEM 2 -->
 								<div class="testimonial-slide">
-									<span class="testimonial-ratings">
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-									</span>
 									<blockquote class="testimonial-quote">
 										<p>A mesure que le quotidien s’informatise, se numérise, se robotise, l’innovation fait naître, assez paradoxalement, une  phénoménale bouffée collaborative.</p>
 									</blockquote>
@@ -313,13 +299,6 @@
 
 								<!-- TESTIMONIAL ITEM 3 -->
 								<li class="testimonial-slide">
-									<span class="testimonial-ratings">
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-									</span>
 									<blockquote class="testimonial-quote">
 										<p>L'innovation consiste à socialiser des inventions technologiques, elles-mêmes issues de découvertes scientifiques. Innover, c'est produire du nouveau (méthodes, objets, services) pour l'installer sur un marché.</p>
 									</blockquote>
@@ -328,13 +307,6 @@
 
 								<!-- TESTIMONIAL ITEM 4 -->
 								<div class="testimonial-slide">
-									<span class="testimonial-ratings">
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-										<span class="fa fa-star"></span>
-									</span>
 									<blockquote class="testimonial-quote">
 										<p>Des prévisions réalisées par Cisco indiquent que d’ici 2022, l’Internet des Objets générera 14,4 000 milliards de dollars en bénéfices et revenus. Une autre étude de General Electric publiée en novembre 2012 conclut que les gains en efficacité et productivité induits par un système industriel digitalisé rejailliront sur tous les secteurs économiques d’ici 2025, impactant approximativement une moitié de l’économie globale.</p>
 									</blockquote>
@@ -353,14 +325,14 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Autres entreprises soutenant l'évènement</p>
+						<p>Ces entreprises soutiennent l'événement !</p>
 						<img src="images/contents/logo Hager.png" alt="">
 						<img src="images/contents/logo socomec.jpg" alt="">
 						<img src="images/contents/logo IID.jpg" alt="">
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Autres institutions soutenant l'évènement</p>
+						<p>Ces institutions soutiennent l'événement !</p>
 						<img src="images/contents/banner-stras.png" alt="">
 						<img src="images/contents/logo INSA.jpg" alt="">
 					</div>
