--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Comment ça marche</a></li>
-							<li><a href="#jury">Le jury</a></li>
+							<!--<li><a href="#jury">Le jury</a></li>-->
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
