fix eventbrite button

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 
 					<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
-					<div class="closing-buttons" data-animation="tada"><a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="anchor-link btn btn-lg btn-primary">J'y vais !</a></div>
+					<div class="closing-buttons" data-animation="tada"><a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary">J'y vais !</a></div>
 
 				</div>
 
