add scalingo logo

--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 						<img src="images/contents/logo Hager.png" alt="">
 						<img src="images/contents/logo socomec.jpg" alt="">
 						<img src="images/contents/logo IID.jpg" alt="">
+						<a href="http://scalingo.com" target="_blank"><img src="images/contents/scalingo.png" alt="Scalingo"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
