--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 										<li>
 											<span class="icon-list-icon fa fa-lightbulb-o" data-animation="bounceIn"></span>
 											<h4 class="icon-list-title">Stimuler la créativité collective</h4>
-											<p>Découverte, rencontre, surprise. Un hackathon c'est sortir de sa zone de confort.</p>
+											<p>Découvertes, rencontres, surprises. Un hackathon c'est sortir de sa zone de confort.</p>
 										</li>
 									</ul>
 		
@@ -241,12 +241,12 @@
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-heart-o" data-animation="bounceIn"></span>
-									<h4 class="icon-list-title">Generation Même pas peur</h4>
+									<h4 class="icon-list-title">Génération Même pas peur</h4>
 									<p>54 h pour innover à plusieurs. Un concentré d’énergie créative de tous bords : développeurs, ingénieurs, designers, bricoleurs, utilisateurs, marketeurs… </p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-lightbulb-o" data-animation="bounceIn"></span>
-									<h4 class="icon-list-title">Idées d'aujourd'hui Entreprises de demain</h4>
+									<h4 class="icon-list-title">Idées d'aujourd'hui, Entreprises de demain</h4>
 									<p>54 h pour démultiplier les idées, les faire émerger, les concrétiser et donner naissance à des projets innovants qui se poursuivront, soit par la création de start up, soit au sein d’entreprises existantes.</p>
 								</li>
 							</ul>
@@ -320,7 +320,7 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement</p>
+						<p>Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p>
 						<img src="images/contents/logo ES2.jpg" alt="">
 					</div>
 
@@ -512,15 +512,15 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">C'est pour moi ?</h4>
-								<div class="faq-item-text">L'événement est ouvert à tous. Quel que soient votre profil ou vos compétences, vous pouvez prendre part au challenge en équipe. Que vous soyez developpeur, designer, etrepreneurs, ingénieurs ou utilisateurs. Tous les superpouvoirs sont bienvenus.</div>
+								<div class="faq-item-text">L'événement est ouvert à tous. Quel que soient votre profil ou vos compétences, vous pouvez prendre part au challenge en équipe. Que vous soyez développeurs, designers, entrepreneurs, ingénieurs ou utilisateurs. Tous les superpouvoirs sont bienvenus.</div>
 							</div>
 						</div>
 
 						<div class="col-md-6">
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
-								<h4 class="faq-item-heading">Quel état d'avancement du projet</h4>
-								<div class="faq-item-text">Vous pouvez développer un projet from scratch cad développer un projet existant maximun au stade de concept</div>
+								<h4 class="faq-item-heading">Quel état d'avancement du projet ?</h4>
+								<div class="faq-item-text">Vous pouvez développer un projet from scratch cad développer un projet existant maximun au stade de concept.</div>
 							</div>
 						</div>
 					</div>
@@ -538,7 +538,7 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">Les défis</h4>
-								<div class="faq-item-text">Pour participer vous pouvez soit poster un défi, soit choisir un défi posté par un autre participant et integrer l'équipe</div>
+								<div class="faq-item-text">Pour participer vous pouvez soit proposer un défi, soit choisir un défi posté par un autre participant et integrer l'équipe.</div>
 							</div>
 						</div>
 					</div>
@@ -556,7 +556,7 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">Organisation</h4>
-								<div class="faq-item-text">Le montant de votre participation couvre les repas du vendredi soir au dimanche midi. Petit déjeuner compris. Vou pouvez dormir sur place. N'hésitez pas à ramener votre matelas et votre bonnet de nuit.</div>
+								<div class="faq-item-text">Le montant de votre participation couvre les repas du vendredi soir au dimanche midi, petit déjeuner compris. Vous pouvez dormir sur place. N'hésitez pas à ramener votre matelas et votre bonnet de nuit.</div>
 							</div>
 						</div>
 
@@ -622,7 +622,7 @@
 									<address class="col-sm-6">
 										<strong>INSA</strong>
 										<ul class="fa-ul">
-											<li><i class="fa-li fa fa-home"></i>24 bd de la Victoire<br>Strasbourg</li>
+											<li><i class="fa-li fa fa-home"></i>24 boulevard de la Victoire<br>Strasbourg</li>
 											<li><i class="fa-li fa fa-phone"></i>Téléphone : 03.88.41.86.95</li>
 										</ul>
 									</address>
