add the link to sparkboard

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
-							<li class="header-action-button"><a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
+							<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
+							<li class="header-action-button"><a target="_blank" href="http://hackingindustrycamp.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 
 						</ul>
 
@@ -649,11 +650,18 @@
 				</div>
 
 				<div class="container">
+					<div class="row">
+						<div class="col-md-6">
+							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
-					<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
+							<div class="closing-buttons" data-animation="tada"><a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary">J'y vais !</a></div>
+						</div>
+						<div class="col-md-6">
+							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
-					<div class="closing-buttons" data-animation="tada"><a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary">J'y vais !</a></div>
-
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hackingindustrycamp.sparkboard.com/"class="btn btn-lg btn-primary">Voir les défis / Proposer un défi</a></div>
+						</div>
+					</div>
 				</div>
 
 			</section>
