--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
 						<div class="col-md-6">
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hackingindustrycamp.sparkboard.com/"class="btn btn-lg btn-primary">Voir les défis / Proposer un défi</a></div>
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hackingindustrycamp.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
 						</div>
 					</div>
 				</div>
