--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
 					<div class="sponsors-row" data-animation="bounceIn">
 						<p>Ces institutions soutiennent l'événement !</p>
 						<img src="images/contents/banner-stras.png" alt="">
-						<img src="images/contents/logo INSA.jpg" alt="">
+						<img src="images/contents/logo INSA.jpg" alt=""><br>
+						<img src="images/contents/accro.jpg" alt="">
 					</div>
 
 				</div>
