add logo french tech alsace

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 						<p>Ces institutions soutiennent l'événement !</p>
 						<img src="images/contents/banner-stras.png" alt="">
 						<img src="images/contents/logo INSA.jpg" alt=""><br>
+						<img src="images/contents/fta.jpg" alt="">
 						<img src="images/contents/accro.jpg" alt="">
 					</div>
 
