--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
 								</div>
 							</div>
 
+
+							<div class="newsbox col-md-11 col-md-offset-1">
+								<strong>Dernière minute :</strong> <a href="https://www.eventbrite.fr/e/billets-atelier-hacking-industry-camp-n2-18683293233" target="_blank">Un atelier de préparation aura lieu le lundi 28 septembre à Molsheim</a>
+							</div>
+
 							<div class="hero-features row">
 
 								<div class="hero-features-left col-md-7">
