--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					<div class="sponsors-row" data-animation="bounceIn">
 						<p>Ces institutions soutiennent l'événement !</p>
 						<img src="images/contents/banner-stras.png" alt="">
-						<img src="images/contents/logo INSA.jpg" alt=""><br>
+						<img src="images/contents/insa.png" alt=""><br>
 						<img src="images/contents/fta.jpg" alt="">
 						<img src="images/contents/accro.jpg" alt="">
 					</div>
