update sponsors logo

--- a/index.html
+++ b/index.html
@@ -331,19 +331,24 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Ces entreprises soutiennent l'événement !</p>
+						<p>Ces entreprises / associations soutiennent l'événement !</p>
 						<img src="images/contents/logo Hager.png" alt="">
 						<img src="images/contents/logo socomec.jpg" alt="">
 						<img src="images/contents/logo IID.jpg" alt="">
 						<a href="http://scalingo.com" target="_blank"><img src="images/contents/scalingo.png" alt="Scalingo"></a>
+						<img src="images/contents/lafabrique.jpg" alt="">
+						<img src="images/contents/cpc-analytics.jpg" alt="">
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<p>Ces institutions soutiennent l'événement !</p>
 						<img src="images/contents/banner-stras.png" alt="">
-						<img src="images/contents/insa.png" alt=""><br>
+						<img src="images/contents/insa.png" alt="">				
+						<img src="images/contents/pepite.jpg" alt="">
+						<img src="images/contents/etena.jpg" alt=""><br>
 						<img src="images/contents/fta.jpg" alt="">
 						<img src="images/contents/accro.jpg" alt="">
+						<img src="images/contents/ccialsace.jpg" alt="">
 					</div>
 
 				</div>
