--- a/index.html
+++ b/index.html
@@ -326,29 +326,29 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p>
-						<img src="images/contents/logo ES2.jpg" alt="">
+						<p>Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p><br>
+						<a href="http://www.es-groupe.fr/" target="_blank"><img src="images/contents/logo ES2.jpg" alt="Groupe ES"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Ces entreprises / associations soutiennent l'événement !</p>
-						<img src="images/contents/logo Hager.png" alt="">
-						<img src="images/contents/logo socomec.jpg" alt="">
-						<img src="images/contents/logo IID.jpg" alt="">
-						<a href="http://scalingo.com" target="_blank"><img src="images/contents/scalingo.png" alt="Scalingo"></a>
-						<img src="images/contents/lafabrique.jpg" alt="">
-						<img src="images/contents/cpc-analytics.jpg" alt="">
+						<p>Ces entreprises / associations soutiennent l'événement !</p><br>
+						<a href="http://www.hager.fr/" target="_blank"><img src="images/contents/logo Hager.png" alt="Hager"></a>
+						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>
+						<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>
+						<a href="http://scalingo.com" target="_blank"><img width="250" src="images/contents/scalingo.svg" alt="Scalingo"></a>
+						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
+						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Ces institutions soutiennent l'événement !</p>
-						<img src="images/contents/banner-stras.png" alt="">
-						<img src="images/contents/insa.png" alt="">				
-						<img src="images/contents/pepite.jpg" alt="">
-						<img src="images/contents/etena.jpg" alt=""><br>
-						<img src="images/contents/fta.jpg" alt="">
-						<img src="images/contents/accro.jpg" alt="">
-						<img src="images/contents/ccialsace.jpg" alt="">
+						<p>Ces institutions soutiennent l'événement !</p><br>
+						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
+						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>			
+						<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>
+						<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/etena.jpg" alt="Etena"></a><br>
+						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img src="images/contents/fta.jpg" alt="La French Tech Alsace"></a>
+						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
+						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
 					</div>
 
 				</div>
