--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 							</div>
 
 
-							<div class="newsbox col-md-10 col-md-offset-1">
-								<strong>Dernière minute :</strong> <a href="https://www.eventbrite.fr/e/billets-atelier-hacking-industry-camp-n2-18683293233" target="_blank">Un atelier de préparation aura lieu le lundi 28 septembre à Molsheim</a>
-							</div>
+							<!--<div class="newsbox col-md-10 col-md-offset-1">
+								<strong>Dernière minute :</strong>
+							</div>-->
 
 							<div class="hero-features row">
 
