--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Comment ça marche</a></li>
-							<!--<li><a href="#jury">Le jury</a></li>-->
+							<!--<li><a href="#coachs">Coachs &amp; Jury</a></li>-->
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
@@ -213,6 +213,10 @@
 							<p class="headline-text">
 								A <strong>hackathon</strong> (also known as a hack day, hackfest or codefest) is an event in which computer programmers and others involved in software development and hardware development, including graphic designers, interface designers and project managers, collaborate intensively on software projects. Occasionally, there is a hardware component as well.
 							</p>
+
+							<div class="col-md-12 text-center">
+								<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="https://www.facebook.com/alsace.digitale/videos/1168785789802934/"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alsace.digitale/videos/1168785789802934/"><a href="https://www.facebook.com/alsace.digitale/videos/1168785789802934/">Encouragement Gilles Babinet HICamp www.hackingindustry.camp</a><p>#Gift les encouragements de  Gilles Babinet pour le Hacking industry Camp ! On adore.</p>Posted by <a href="https://www.facebook.com/alsace.digitale">Alsace Digitale</a> on Friday, October 2, 2015</blockquote></div></div>
+							</div>
 
 						</div>
 					</div>
@@ -424,8 +428,92 @@
 
 			<!-- TEAM
 			================================= -->
-			<!--<section id="jury" class="team-section section">
+			<!--<section id="coachs" class="team-section section">
 
+				<div class="container-fluid">
+					
+					<h2 class="section-heading text-center">Les Coachs</h2>
+
+					<div class="team-row row">
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Jason Castillo</h4>
+									<div class="team-member-position">CEO &amp; Co-Founder</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Harold Kelly</h4>
+									<div class="team-member-position">CTO &amp; Co-Founder</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Kathy Nelson</h4>
+									<div class="team-member-position">Graphic Designer</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-sm hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/team-member-4.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Dylan Fowler</h4>
+									<div class="team-member-position">UI/UX Designer</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/team-member-5.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Carolyn Harvey</h4>
+									<div class="team-member-position">Development</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/team-member-6.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Diane Grant</h4>
+									<div class="team-member-position">Marketing &amp; Strategy</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</section>
+
+			<section id="jury" class="team-section section">
 				<div class="container-fluid">
 					
 					<h2 class="section-heading text-center">Le Jury</h2>
