logo cafes reck

--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
 						<a href="http://scalingo.com" target="_blank"><img width="250" src="images/contents/scalingo.svg" alt="Scalingo"></a>
 						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
 						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
+						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
